--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,17 +13,13 @@
   font-display: swap;
 }
 body {
-  background: #f2f2f2;
-  color: black;
+  background-color: #e5e5e5;
+  color: #000000;
   font-family: 'PT Sans', sans-serif;
-  font-size: 30px;
   font-weight: 700;
+  font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-}
-.page-header {
-  background: #ffffff;
-  color: #000000;
 }
 .navigation-link {
   color: #000;
@@ -32,23 +28,67 @@ body {
   text-transform: none;
   text-decoration: none;
 }
-.main-banner {
-  background-image: url('../images/main_banner.jpg');
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-  /* padding-top: 0px; */
-}
 .welcome {
   background-image: url('../images/background_welcome.jpg');
   background-size: 100% auto;
   background-repeat: no-repeat;
+  font-size: 30px;
+  line-height: 36px;
+  padding-top: 63px;
+  text-align: center;
 }
 .five_advantages {
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
+  padding-top: 31px;
+  padding-bottom: 90px;
   text-transform: none;
 }
+p {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.advantages {
+  text-align: center;
+}
+.advantages-title {
+  font-size: 24px;
+  line-height: 28px;
+}
+.advantages-item {
+  color:#ffffff;
+}
+.advantages-description {
+font-size: 18px;
+line-height: 21px;
+text-transform: none;
+
+  }
+/* h1 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+}
+.page-header {
+  background: #ffffff;
+  color: #000000;
+}
+
+.main-banner {
+  background-image: url('../images/main_banner.jpg');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: 0px;
+}
+img .main-banner-welcome {
+  /* background-repeat: no-repeat; */
+  /* background-position: center;
+}
+
+
 .advantages-title {
   font-size: 24px;
   line-height: 28px;
@@ -58,9 +98,12 @@ body {
   font-size: 18px;
   line-height: 21px;
   text-transform: none;
-}
-.subscription {
-  background-image: url(../images/background_subscribe.jpg);
+} */
+/* .advantages-first-image {
+  background-position: center;
+} */
+/* .subscription {
+  /* background-image: url(../images/background_subscribe.jpg); */
   background-size: 100% auto;
   background-repeat: no-repeat;
-}
+} */ */ */
