--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,14 +52,23 @@ body {
   line-height: 28px;
 }
 .advantages-item {
-  color:#ffffff;
+  color: #ffffff;
 }
 .advantages-description {
-font-size: 18px;
-line-height: 21px;
-text-transform: none;
+  font-size: 18px;
+  line-height: 21px;
+  text-transform: none;
+}
+.services {
+  color: #000000;
+}
+h3 {
+  margin-top: 0px;
+}
+p {
+  margin-top: 0px;
+}
 
-  }
 /* h1 {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -80,7 +89,7 @@ text-transform: none;
 }
 img .main-banner-welcome {
   /* background-repeat: no-repeat; */
-  /* background-position: center;
+/* background-position: center;
 }
 
 
@@ -99,6 +108,6 @@ img .main-banner-welcome {
 } */
 /* .subscription {
   /* background-image: url(../images/background_subscribe.jpg); */
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-} */ */ */
+/* background-size: 100% auto;
+  background-repeat: no-repeat; */
+/* } */
