--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,37 +37,33 @@ body {
   text-align: center;
 }
 .five_advantages {
-  font-weight: 400;
   font-size: 22px;
   line-height: 26px;
-
   text-transform: none;
 }
-
 .advantages {
+  color: #000;
   text-align: center;
+  font-weight: 400;
 }
 .advantages-title {
   font-size: 24px;
   line-height: 28px;
 }
-.advantages-item {
+
+.advantages-item-image {
   color: #ffffff;
 }
 .advantages-description {
   font-size: 18px;
   line-height: 21px;
   text-transform: none;
+
 }
-.services {
-  color: #000000;
+
+
 }
-h3 {
-  margin-top: 0px;
-}
-p {
-  margin-top: 0px;
-}
+
 
 /* h1 {
   margin-top: 0px;
