--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,13 +58,44 @@ body {
   font-size: 18px;
   line-height: 21px;
   text-transform: none;
-
+}
+.question-block {
+  text-align: center;
+}
+.question-date {
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 26px;
+  text-transform: uppercase;
+  text-transform: none;
 }
 
-
+.question-button {
+  background-color: #756157;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
 }
-
-
+.subscription {
+  text-align: center;
+  color: #fff;
+}
+.subscription-text {
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 26px;
+  text-transform: none;
+}
+.subscribe-button {
+  background-color: #82b3d3;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+}
 /* h1 {
   margin-top: 0px;
   margin-bottom: 0px;
