--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,9 +23,10 @@ body {
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-size: 30px;
+  justify-content: space-between;
   line-height: 36px;
   margin: 0 auto;
-  min-height: 100%;
+  min-height: 100vh;
   text-transform: uppercase;
   width: 1280px;
 }
