--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,7 +106,7 @@ h2 {
 h1 {
   margin: 0;
 }
-.five_advantages {
+.five-advantages {
   font-size: 22px;
   line-height: 26px;
   text-transform: none;
