--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,13 +52,6 @@ body {
   background-color: #fff;
   margin: 0 auto;
 }
-.welcome {
-  background-color: #fff;
-}
-.main-banner-welcome {
-  display: block;
-  margin: 0 auto;
-}
 .navigation {
   display: flex;
   width: 1200px;
@@ -89,7 +82,6 @@ body {
   text-decoration: none;
   padding: 20px 17px;
 }
-
 .navigation-user {
   align-content: center;
   align-items: center;
@@ -109,6 +101,16 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.welcome {
+  background-color: #fff;
+}
+.main-banner-welcome {
+  display: block;
+  margin: 0 auto;
+  padding-top: 51px;
+  padding-bottom: 82px;
+}
 .welcome {
   font-size: 30px;
   line-height: 36px;
@@ -122,11 +124,12 @@ body {
   background-position: center;
 }
 .body-welcome {
+  align-content: center;
+  background: #fff;
   margin: 0;
-  padding: 0;
-}
-.visually-hidden {
-  margin: 0;
+  padding-top: 63px;
+  padding-bottom: 90px;
+  text-align: center;
 }
 .name-block {
   margin: 0;
@@ -136,7 +139,8 @@ body {
   font-size: 22px;
   font-weight: 400;
   line-height: 26px;
-  margin: 0;
+  margin-top: 31px;
+  margin-bottom: 0px;
   padding: 0;
   text-transform: none;
 }
@@ -154,41 +158,52 @@ body {
 .advantages-title {
   font-size: 24px;
   line-height: 28px;
-  margin: 0;
+  margin-bottom: 30px;
+  margin-top: 0;
   padding: 0;
-}
-.advantages-item {
-  background-color: #82b3d3;
-  display: flex;
-  width: 100%;
-}
-.advantages-item-city {
-  color: #ffffff;
-  width: 400px;
-}
-.advantages-item-bridge {
-  color: #ffffff;
-  width: 400px;
 }
 .advantages-description {
   font-size: 18px;
   line-height: 21px;
-  margin: 0;
   padding: 0;
+  margin-bottom: 30px;
+  margin-top: 0;
   text-transform: none;
 }
+.advantages-description:last-child {
+  margin-bottom: 0;
+}
+.advantages-item {
+  background-color: #82b3d3;
+  display: flex;
+  width: 1200px;
+}
+.advantages-item-city {
+  color: #ffffff;
+  padding: 85px 92px;
+  width: 230px;
+}
+
+.advantages-item-bridge {
+  color: #ffffff;
+  padding: 85px 92px;
+  width: 230px;
+}
+
 .advantages-first-image {
   vertical-align: middle;
 }
 .advantages-services {
   display: flex;
   width: 1200px;
+  margin: 0;
   padding-left: 0;
   list-style: none;
 }
 .services-item {
   display: block;
-  width: 400px;
+  padding: 80px 85px;
+  width: 230px;
   text-align: center;
 }
 .question-block {
