--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,13 +231,12 @@ body {
   padding-left: 0;
   list-style: none;
 }
-
-/* .services-item {
-
+.services-item {
+  display: block;
   padding: 80px 85px;
   width: 230px;
   text-align: center;
-} */
+}
 .services-item:nth-child(2n + 1) {
   background: rgba(131, 179, 211, 0.12);
 }
@@ -329,10 +328,7 @@ body {
   margin: 0;
   padding: 40px 70px 30px 70px;
 }
-.footer-social {
-  width: 142px;
-  margin-right: 42px;
-}
+
 .footer-social-list {
   align-items: center;
   display: flex;
@@ -344,6 +340,27 @@ body {
 .footer-social-item {
   width: 47px;
   height: 40px;
+  margin: 5px 0;
+  padding: 0;
+}
+.footer-social {
+  width: 142px;
+  margin-right: 42px;
+}
+.button-social {
+  padding: auto auto;
+  margin: auto 0;
+  width: 47px;
+  height: 40px;
+}
+.vk {
+  margin: 13px 12px;
+}
+.tg {
+  margin: 12px 15px;
+}
+.youtube {
+  margin: 11px 13px;
 }
 .footer-contacts {
   text-align: center;
@@ -356,7 +373,7 @@ body {
   color: #000;
   font-size: 40px;
   line-height: 40px;
-  padding-right: 195px;
+  padding-right: auto auto;
 
   text-decoration: none;
 }
