--- a/7/styles/styles.css
+++ b/7/styles/styles.css
@@ -14,9 +14,10 @@
 }
 html {
   height: 100%;
+  background-color: green;
 }
 body {
-  background-color: #e5e5e5;
+  background-color: #f2f2f2;
   color: #000000;
   display: flex;
   flex-direction: column;
@@ -92,9 +93,24 @@ body {
   min-width: 18px;
   min-height: 18px;
 }
-.want-button {
-  margin: 14px 0px 14px 20px;
-  padding: 8px 16px 8px 16px;
+
+.button {
+  font-family: 'PT Sans', sans-serif;
+  background-color: #756157;
+  border: none;
+  border-radius: 4px;
+  color: #ffffff;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+
+  padding: 9px 16px;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+  width: 160px;
+  height: 37px;
 }
 .search .favorite {
   padding: 0;
@@ -106,22 +122,22 @@ body {
 .main-banner {
   background-image: url('../images/main_banner.jpg');
   background-color: #7baec7;
-  background-size: auto;
+  background-size: 100% auto;
   background-repeat: no-repeat;
-  background-position: center;
-  width: 100%;
   margin: 0;
-  padding: 0;
+  padding-top: 51px;
+  padding-bottom: 25px;
 }
-
+.decoration {
+  padding: 0;
+  /* margin-top: 25px; */
+}
 .welcome {
   background-color: #fff;
 }
 .main-banner-welcome {
   display: block;
   margin: 0 auto;
-  padding-top: 51px;
-  padding-bottom: 82px;
 }
 .welcome {
   font-size: 30px;
@@ -143,7 +159,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  /* width: 620px; */
 }
 .description-text {
   font-size: 22px;
@@ -197,12 +212,9 @@ body {
 .advantages-item {
   background-color: #82b3d3;
   display: flex;
-  /* margin: 0; */
-  /* max-width: 1200px; */
 }
 .advantages-item-city {
   color: #ffffff;
-
   padding: 85px 92px;
   width: 230px;
 }
@@ -211,9 +223,7 @@ body {
   padding: 85px 92px;
   width: 230px;
 }
-/* .advantages-first-image {
-  vertical-align: middle;
-} */
+
 .advantages-services {
   display: flex;
   width: 100%;
@@ -227,6 +237,36 @@ body {
   width: 230px;
   text-align: center;
 }
+.services-item:nth-child(2n + 1) {
+  background: rgba(131, 179, 211, 0.12);
+}
+.item-dignities {
+  display: block;
+  padding: 103px 86px;
+  width: 230px;
+  text-align: center;
+}
+.housing {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 30px;
+}
+.eating {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 30px;
+}
+.souvenir {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 30px;
+}
+.item-food {
+  background-color: #ffffff;
+}
+.item-road {
+  background-color: rgba(131, 179, 211, 0.2);
+}
 .question-block {
   background-color: #fff;
   text-align: center;
@@ -236,13 +276,17 @@ body {
 }
 .question-button {
   background-color: #756157;
+  border: none;
+  border-radius: 4px;
   color: #fff;
   font-size: 20px;
   font-weight: 700;
+  height: 60px;
   line-height: 36px;
   margin-top: 56px;
   text-transform: uppercase;
   text-align: center;
+  width: 574px;
 }
 
 .subscription {
@@ -258,13 +302,17 @@ body {
 
 .subscribe-button {
   background-color: #82b3d3;
+  border: none;
+  border-radius: 4px;
   color: #fff;
   font-size: 20px;
   font-weight: 700;
+  height: 60px;
   line-height: 36px;
   margin-top: 46px;
   text-transform: uppercase;
   text-align: center;
+  width: 200px;
 }
 .page-footer {
   background-color: #fff;
@@ -280,10 +328,7 @@ body {
   margin: 0;
   padding: 40px 70px 30px 70px;
 }
-.footer-social {
-  width: 142px;
-  margin-right: 42px;
-}
+
 .footer-social-list {
   align-items: center;
   display: flex;
@@ -295,6 +340,27 @@ body {
 .footer-social-item {
   width: 47px;
   height: 40px;
+  margin: 5px 0;
+  padding: 0;
+}
+.footer-social {
+  width: 142px;
+  margin-right: 42px;
+}
+.button-social {
+  padding: auto auto;
+  margin: auto 0;
+  width: 47px;
+  height: 40px;
+}
+.vk {
+  margin: 13px 12px;
+}
+.tg {
+  margin: 12px 15px;
+}
+.youtube {
+  margin: 11px 13px;
 }
 .footer-contacts {
   text-align: center;
@@ -307,7 +373,7 @@ body {
   color: #000;
   font-size: 40px;
   line-height: 40px;
-  padding-right: 195px;
+  padding-right: auto auto;
 
   text-decoration: none;
 }
