--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,7 +51,7 @@ body {
 .navigation {
   display: flex;
   width: 100%;
-  margin: 0 auto;
+  margin-left: 239px;
 }
 .logo {
   margin: 0;
@@ -60,6 +60,8 @@ body {
   width: 139px;
 }
 .logotype {
+  margin: 0;
+  padding: 0;
   position: absolute;
   top: 0;
 }
