--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,21 +50,21 @@ body {
 }
 .navigation {
   display: flex;
+
   width: 100%;
-  margin-left: 239px;
+  margin: 0;
 }
 .logo {
-  margin: 0;
-  padding: 0;
+  display: block;
   margin-left: 70px;
   width: 139px;
+  margin-bottom: -10px;
+  z-index: 1;
 }
-.logotype {
+/* .logotype {
   margin: 0;
   padding: 0;
-  position: absolute;
-  top: 0;
-}
+} */
 .navigation-list {
   align-items: center;
   display: flex;
@@ -73,7 +73,7 @@ body {
   margin: 0;
   margin-left: 30px;
   padding: 0;
-  position: relative;
+  /* position: relative; */
   width: 390px;
 }
 .navigation-link {
@@ -83,12 +83,12 @@ body {
   line-height: 26px;
   text-transform: none;
   text-decoration: none;
-  padding: 20px 17px;
+  padding: 15px 17px;
 }
 .navigation-user {
   align-content: center;
   align-items: center;
-
+  display: flex;
   margin-left: 238px;
   margin-right: auto;
   max-width: 264px;
@@ -97,24 +97,35 @@ body {
   min-width: 18px;
   min-height: 18px;
 }
-
+.navigation-item {
+  align-items: center;
+}
 .button {
+  display: inline-block;
   font-family: 'PT Sans', sans-serif;
-  background-color: #756157;
-  border: none;
-  border-radius: 4px;
   color: #ffffff;
-  cursor: pointer;
-  font-weight: 700;
   font-size: 16px;
   line-height: 20px;
-  margin-bottom: 40px;
-  padding: 9px 16px;
-  text-transform: uppercase;
+  font-weight: 700;
+  background: #82b3d3;
   text-decoration: none;
+  text-transform: uppercase;
   text-align: center;
-  width: 160px;
+  border-radius: 4px;
+  border: none;
+  padding: 0;
+  margin: 0;
+  margin: 0;
+  position: relative;
+  bottom: 3px;
+  cursor: pointer;
+}
+.navigation-button {
+  min-width: 160px;
   height: 37px;
+  box-sizing: border-box;
+  background-color: #756157;
+  padding: 8px 15px;
 }
 .search .favorite {
   padding: 0;
@@ -342,7 +353,7 @@ body {
   padding: 0;
   list-style-type: none;
 }
-.footer-social-item {
+.footer-social-link {
   width: 48px;
   height: 40px;
   /* margin: 5px 0;
